Prevent a possible warning

When doing updates, gtk_progress_bar_real_update can calculate
compute a negative value for activity_pos.

If the allocation width is smaller than (xthickness + size),
pbar->activity_pos will be set to a negative value and this will
cause the drawing code to emit a warning about coordinates being
out of bounds.

Prevent this by keeping the value at least 0.

https://bugzilla.gnome.org/show_bug.cgi?id=701751